# Peer_Company_Benchmarking

./: .gitignore  CLAUDE.md  PLAN.md  pyproject.toml
outputs/: all_kpi_crosstab.xlsx  bel_canonical_crosstab.xlsx  bel_disclosure_filled.xlsx  bel_disclosure_template_crosstab.xlsx  bel_faithful_per_peer.xlsx  bel_label_crosstab.xlsx  bel_variation_by_peer.xlsx  bel_variation_normalized.xlsx  csm_disclosure_filled.xlsx  life_insurer_actuarial_peer_report.html  master_actuarial_report.xlsx  peer_disclosure_actuarial_analysis_report.html  ra_disclosure_filled.xlsx
report/: 2025_annual.html  2025_annual.xlsx  21-1_보험계약부채변동_LRC_LIC_template.html  21-1_보험계약부채변동_LRC_LIC_미래에셋_2025.html  21-1_보험계약부채변동_LRC_LIC_미래에셋_2025_v2.html  21-1_보험계약부채변동_template.html  IFRS17_보험계약부채변동_9개사.xlsx  actuarial_by_year.json  all_roles_v4.html  analytic_scope.json  assumption_changes.json  coverage_matrix.csv  csm_amortization.json  csm_movement.json  csm_not_adjust_components.json  di817100_full_dump.xlsx  di817100_self_data.html  di817100_units.xlsx  expected_vs_actual.json  feasibility_details.json  feasibility_report.html  feasibility_summary.csv  liability_movement_by_component.json  line_crosstab.csv  line_crosstab_v2.csv  line_values_matrix.json  loss_component_pnl.json  mirae_DI817100.xlsx  mirae_dump.xlsx  operating_expense_results.json  peer_assumption_both.json  peer_assumption_changes.json  peer_assumption_changes_v2.json  peer_assumption_final.json  peer_mapping_di817100.csv  peer_values_P1_P9.html  pricing_margins.json  product_mix_results.json  ra_release.json  role_inventory.xlsx  (+7 more)
(+147 files in other folders)
